--- a/css/style.css
+++ b/css/style.css
@@ -44,6 +44,8 @@
     min-height: 20vh;
     margin-bottom: 10px;
     box-shadow: 2px -2px 15px rgb(255, 255, 255) inset;
+    display: flex;
+    justify-content: center;
 }
 
 .molecule-container{
@@ -56,6 +58,3 @@ h2 {
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
-canvas {
-    width: 100px;
-}
