--- a/css/style.css
+++ b/css/style.css
@@ -1,5 +1,8 @@
 * {
     margin: 0;
+    padding: 0;
+    border: 0;
+    box-sizing: border-box;
 }
 
 #main-container {
@@ -15,17 +18,38 @@
 #composer-container {
     display: flex;
     box-sizing: border-box;
-    width: 90%;
+    width: 80%;
     min-width: 400px;
     max-width: 800px;
-    height: 90vh;
-    max-height: 400px;
+    min-height: 20vh;
     justify-content: center;
     align-items: center;
-    box-shadow: 15px 15px 50px rgba(0, 0, 0 ,0.9);
+    box-shadow: 2px 2px 5px rgba(0, 0, 0 ,0.5);
     padding: 20px;
     background: white;
 
+}
+
+#textInputCont {
+    width: 80%;
+    height: 15vh;
+    background: white;
+    margin-bottom: 20px;
+    display: flex;
+}
+
+#textInputCont textarea {
+    height: 15vh;
+    width: 80%;
+    padding: 8px;
+}
+
+#textInputCont button {
+    height: 15vh;
+    width: 20%;
+    background: grey;
+    color: white;
+    font-size: 20px;
 }
 
 .btn-container {
@@ -39,18 +63,22 @@
 }
 
 .viewer {
-    background: rgb(226, 226, 226);
+    background: white;
     width: 80%;
     min-height: 20vh;
     margin-bottom: 10px;
-    box-shadow: 2px -2px 15px rgb(255, 255, 255) inset;
     display: flex;
+    flex-direction: column;
     justify-content: center;
 }
 
 .molecule-container{
     min-height: 20vh;
-    min-width: 20%;
+    width: 100%;
+}
+.spacer {
+    width:100%;
+    height: 10vh;
 }
 
 h2 {
