--- a/css/style.css
+++ b/css/style.css
@@ -75,6 +75,10 @@
 .molecule-container{
     min-height: 20vh;
     width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
 }
 .spacer {
     width:100%;
