--- a/css/style.css
+++ b/css/style.css
@@ -3,6 +3,7 @@
     padding: 0;
     border: 0;
     box-sizing: border-box;
+    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 
 #main-container {
@@ -20,7 +21,6 @@
     box-sizing: border-box;
     width: 80%;
     min-width: 400px;
-    max-width: 800px;
     min-height: 20vh;
     justify-content: center;
     align-items: center;
@@ -36,20 +36,28 @@
     background: white;
     margin-bottom: 20px;
     display: flex;
+    justify-content: flex-end;
+    border-radius: 50px;
 }
 
 #textInputCont textarea {
     height: 15vh;
-    width: 80%;
-    padding: 8px;
+    width: 70%;
+    padding: 15px;
 }
 
 #textInputCont button {
     height: 15vh;
     width: 20%;
-    background: grey;
+    background: rgb(54, 192, 134);
     color: white;
-    font-size: 20px;
+    font-size: 14px;
+    font-weight: bold;
+    border-radius: 0 50px 50px 0;
+}
+
+textarea:focus, input:focus, button:focus {
+    outline: none;
 }
 
 .btn-container {
@@ -58,8 +66,10 @@
 }
 
 .boton {
-    padding: 5px 10px;
+    padding: 10px 20px;
     margin: 2px;
+    background: rgb(35, 158, 107);
+    color: white;
 }
 
 .viewer {
@@ -87,6 +97,6 @@
 
 h2 {
     color: white;
-    font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+
 }
 
