--- a/css/style.css
+++ b/css/style.css
@@ -37,7 +37,7 @@
     margin-bottom: 20px;
     display: flex;
     justify-content: flex-end;
-    border-radius: 50px;
+    border-radius: 50px 50px 0 0;
 }
 
 #textInputCont textarea {
@@ -53,11 +53,16 @@
     color: white;
     font-size: 14px;
     font-weight: bold;
-    border-radius: 0 50px 50px 0;
+    border-radius: 0 50px 0 0;
 }
 
 textarea:focus, input:focus, button:focus {
     outline: none;
+}
+
+#textInputCont ::placeholder {
+    color: rgb(241, 193, 166);
+    font-size: 20px;
 }
 
 .btn-container {
