--- a/css/style.css
+++ b/css/style.css
@@ -13,7 +13,7 @@
     min-height: 100vh;
     justify-content: center;
     align-items: center;
-    background: rgb(28, 38, 43);
+    background: rgb(28, 43, 42);
 }
 
 #composer-container {
@@ -103,6 +103,16 @@ textarea:focus, input:focus, button:focus {
     justify-content: center;
     align-items: center;
 }
+
+.text-container{
+    min-height: 5vh;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+}
+
 .spacer {
     width:100%;
     height: 10vh;
@@ -110,6 +120,7 @@ textarea:focus, input:focus, button:focus {
 
 h2 {
     color: white;
+    padding: 20px;
 
 }
 
