--- a/css/style.css
+++ b/css/style.css
@@ -18,7 +18,7 @@
 
 #composer-container {
     display: flex;
-    width: 80%;
+    width: 75%;
     min-width: 400px;
     min-height: 20vh;
     justify-content: center;
@@ -30,13 +30,12 @@
 }
 
 #textInputCont {
-    width: 80%;
+    width: 75%;
     height: 15vh;
     background: white;
-    margin-bottom: 20px;
+    margin-bottom: 14px;
     display: flex;
     justify-content: flex-end;
-    border-radius: 50px 50px 0 0;
 }
 
 #textInputCont textarea {
@@ -44,17 +43,16 @@
     width: 70%;
     padding: 15px;
     background: none;
-    font-size: 16px;
+    font-size: 12px;
 }
 
 #textInputCont button {
     height: 15vh;
-    width: 20%;
+    width: 30%;
     background: rgb(54, 192, 134);
     color: white;
-    font-size: 20px;
+    font-size: 14px;
     font-weight: bold;
-    border-radius: 0 50px 0 0;
     
 }
 
@@ -63,13 +61,13 @@ textarea:focus, input:focus, button:focus {
 }
 
 #textInputCont ::placeholder {
-    color: rgb(241, 193, 166);
-    font-size: 20px;
+    color: rgb(192, 148, 123);
+    font-size: 12px;
 }
 
 .btn-container {
     display: flex;
-    width: 80%;
+    width: 75%;
     justify-content: center;
 }
 
@@ -81,13 +79,12 @@ textarea:focus, input:focus, button:focus {
     font-size: 20px;
     width: 100%;
     height: 10vh;
-    border-radius: 0 0 20px 20px;
     font-weight: bold;
 }
 
 .viewer {
     background: white;
-    width: 80%;
+    width: 75%;
     min-height: 20vh;
     margin-bottom: 10px;
     display: flex;
@@ -105,14 +102,19 @@ textarea:focus, input:focus, button:focus {
 }
 
 .text-container{
-    min-height: 5vh;
-    width: 100%;
-    text-align: center;
     display: flex;
     justify-content: center;
-    align-items: center;
-}
+    min-height: 15vh;
+    width: 100%;
 
+
+}
+.text-container p {
+    width: 100%;
+    height: 10vh;
+    font-size: 14px;
+    text-align: center;
+}
 .spacer {
     width:100%;
     height: 10vh;
