--- a/css/style.css
+++ b/css/style.css
@@ -101,7 +101,7 @@ textarea:focus, input:focus, button:focus {
     align-items: center;
 }
 
-.text-container {
+.text-container p {
     display: flex;
     justify-content: center;
     align-items: center;
@@ -112,7 +112,7 @@ textarea:focus, input:focus, button:focus {
 }
 .text-container p {
     width: 100%;
-    height: 10vh;
+    height: auto;
     font-size: 14px;
     text-align: center;
 }
