--- a/css/style.css
+++ b/css/style.css
@@ -128,7 +128,7 @@ h2 {
 }
 
 @media only screen and (min-width: 800px) {
-  .text-container {
+  .text-container p {
     font-size: 20px;
   }
    #textInputCont textarea {
@@ -136,5 +136,5 @@ h2 {
   }
     #textInputCont ::placeholder {
     font-size: 20px;
-}
+    }
 }
