--- a/css/style.css
+++ b/css/style.css
@@ -107,16 +107,9 @@ textarea:focus, input:focus, button:focus {
     heigth: auto;
     width: 100%;
     word-wrap:break-word;
+    padding: 20px;
 
 
-}
-.text-container p {
-    width: 100%;
-    height: auto;
-    font-size: 14px;
-    text-align: center;
-    padding: 20px 0;
-}
 .spacer {
     width:100%;
     height: 10vh;
