--- a/css/style.css
+++ b/css/style.css
@@ -108,7 +108,7 @@ textarea:focus, input:focus, button:focus {
     width: 100%;
     word-wrap:break-word;
     padding: 20px;
-
+}
 
 .spacer {
     width:100%;
