--- a/css/style.css
+++ b/css/style.css
@@ -26,14 +26,13 @@
     box-shadow: 2px 2px 5px rgba(0, 0, 0 ,0.5);
     background: white;
     margin-bottom: 10px;
-
 }
 
 #textInputCont {
     width: 75%;
     height: 15vh;
     background: white;
-    margin-bottom: 14px;
+    margin-bottom: 1em;
     display: flex;
     justify-content: flex-end;
 }
@@ -51,7 +50,7 @@
     width: 30%;
     background: rgb(54, 192, 134);
     color: white;
-    font-size: 14px;
+    font-size: 1em;
     font-weight: bold;
     
 }
@@ -72,11 +71,11 @@ textarea:focus, input:focus, button:focus {
 }
 
 .boton {
-    padding: 10px 20px;
+    padding: 10px 1.25em;
     margin: 2px;
     background: rgb(35, 158, 107);
     color: white;
-    font-size: 20px;
+    font-size: 1.25em;
     width: 100%;
     height: 10vh;
     font-weight: bold;
@@ -101,20 +100,16 @@ textarea:focus, input:focus, button:focus {
     align-items: center;
 }
 
-.text-container{
+.text-container p {
     display: flex;
     justify-content: center;
-    min-height: 15vh;
+    align-items: center;
+    heigth: auto;
     width: 100%;
-
-
+    word-wrap:break-word;
+    padding: 1.25em;
 }
-.text-container p {
-    width: 100%;
-    height: 10vh;
-    font-size: 14px;
-    text-align: center;
-}
+
 .spacer {
     width:100%;
     height: 10vh;
@@ -122,7 +117,18 @@ textarea:focus, input:focus, button:focus {
 
 h2 {
     color: white;
-    padding: 20px;
+    padding: 1.25em;
 
 }
 
+@media only screen and (min-width: 800px) {
+  .text-container p {
+    font-size: 1.25em;
+  }
+   #textInputCont textarea {
+    font-size: 1.25em;
+  }
+    #textInputCont ::placeholder {
+    font-size: 1.25em;
+    }
+}
