--- a/css/style.css
+++ b/css/style.css
@@ -5,6 +5,7 @@
     box-sizing: border-box;
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
+/* --- Contenedores------*/
 
 #main-container {
     display: flex;
@@ -19,13 +20,14 @@
 #composer-container {
     display: flex;
     width: 75%;
-    min-width: 400px;
+    min-width: 250px;
     min-height: 20vh;
     justify-content: center;
     align-items: center;
     box-shadow: 2px 2px 5px rgba(0, 0, 0 ,0.5);
     background: white;
     margin-bottom: 10px;
+    overflow: scroll;
 }
 
 #textInputCont {
@@ -45,41 +47,7 @@
     font-size: 12px;
 }
 
-#textInputCont button {
-    height: 15vh;
-    width: 30%;
-    background: rgb(54, 192, 134);
-    color: white;
-    font-size: 1em;
-    font-weight: bold;
-    
-}
 
-textarea:focus, input:focus, button:focus {
-    outline: none;
-}
-
-#textInputCont ::placeholder {
-    color: rgb(192, 148, 123);
-    font-size: 12px;
-}
-
-.btn-container {
-    display: flex;
-    width: 75%;
-    justify-content: center;
-}
-
-.boton {
-    padding: 10px 1.25em;
-    margin: 2px;
-    background: rgb(35, 158, 107);
-    color: white;
-    font-size: 1.25em;
-    width: 100%;
-    height: 10vh;
-    font-weight: bold;
-}
 
 .viewer {
     background: white;
@@ -91,14 +59,68 @@ textarea:focus, input:focus, button:focus {
     justify-content: center;
 }
 
-.molecule-container{
+.molecule-container {
     min-height: 20vh;
     width: 100%;
     text-align: center;
     display: flex;
     justify-content: center;
     align-items: center;
+    padding: 10px;
 }
+
+.text-container{
+    height: auto;
+    width: 100%;
+    text-align: center;
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    padding: 10px;
+}
+
+.btn-container {
+    display: flex;
+    width: 75%;
+    justify-content: center;
+}
+
+
+
+
+/*----- Botones --------------------*/
+
+#textInputCont button {
+    height: 15vh;
+    width: 30%;
+    background: rgb(54, 192, 134);
+    color: white;
+    font-size: 1.1em;
+    
+}
+
+.boton {
+    padding: 10px 1.25em;
+    background: rgb(35, 158, 107);
+    color: white;
+    font-size: 1.1em;
+    width: 100%;
+    height: 10vh;
+}
+
+.boton:active, #textInputCont button:active {
+    background: rgb(29, 214, 137);
+}
+
+textarea:focus, input:focus, button:focus {
+    outline: none;
+}
+
+#textInputCont ::placeholder {
+    color: rgb(192, 148, 123);
+    font-size: 12px;
+}
+
 
 .text-container p {
     display: flex;
@@ -107,7 +129,7 @@ textarea:focus, input:focus, button:focus {
     height: auto;
     width: 100%;
     word-wrap:break-word;
-    padding: 20px;
+    padding: 10px;
 }
 
 .spacer {
@@ -121,14 +143,22 @@ h2 {
 
 }
 
+/*----Kekule editor--------*/
+.K-Button {
+    background: rgb(255, 255, 255);
+}
+.K-Button:active {
+    background: rgb(7, 250, 149);
+}
+
 @media only screen and (min-width: 800px) {
   .text-container p {
-    font-size: 1.25em;
+    font-size: 1.1em;
   }
    #textInputCont textarea {
-    font-size: 1.25em;
+    font-size: 1.1em;
   }
     #textInputCont ::placeholder {
-    font-size: 1.25em;
+    font-size: 1.1em;
     }
 }
