--- a/css/style.css
+++ b/css/style.css
@@ -6,20 +6,24 @@
     font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
 }
 /* --- Contenedores------*/
+body {
+    background: rgb(28, 43, 42);
+}
 
 #main-container {
+    margin: auto;
     display: flex;
     flex-direction: column;
-    width: 100%;
+    width: 90%;
     min-height: 100vh;
+    max-width: 800px;
     justify-content: center;
     align-items: center;
-    background: rgb(28, 43, 42);
 }
 
 #composer-container {
     display: flex;
-    width: 90%;
+    width: 100%;
     min-width: 250px;
     min-height: 20vh;
     justify-content: center;
@@ -31,7 +35,7 @@
 }
 
 #textInputCont {
-    width: 90%;
+    width: 100%;
     height: 15vh;
     background: white;
     margin-bottom: 1em;
@@ -44,14 +48,14 @@
     width: 70%;
     padding: 15px;
     background: none;
-    font-size: 12px;
+    font-size: 0.8em;
 }
 
 
 
 .viewer {
     background: white;
-    width: 90%;
+    width: 100%;
     min-height: 20vh;
     margin-bottom: 10px;
     display: flex;
@@ -81,7 +85,7 @@
 
 .btn-container {
     display: flex;
-    width: 90%;
+    width: 100%;
     justify-content: center;
 }
 
@@ -156,7 +160,7 @@ h2 {
     font-size: 1.1em;
   }
    #textInputCont textarea {
-    font-size: 1.1em;
+    font-size: 1em;
   }
     #textInputCont ::placeholder {
     font-size: 1.1em;
